<resources>
    <string name="app_name">easy</string>
    <string name="shopname">ShopName</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">home</string>
    <string name="collection">Collection</string>
    <string name="day_wise_collection">Day wise Collection</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="communication">Communication</string>
    <string name="share_distributor_sassist">Share Distributor\'sAssist</string>
    <string name="rate_us">Rate us</string>
    <string name="pending_bills">Pending Bills</string>

</resources>